crates/toml_edit/tests/fixtures/invalid/text-after-array-entries.stderr
TOML parse error at line 2, column 46
  |
2 |   "Is there life after an array separator?", No
  |                                              ^
Invalid array
Expected `]`
